Fix search weirdness on iPhone X

--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -72,9 +72,6 @@
   display: block;
   width: 100%;
   height: 44px;
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-  padding-top: env(safe-area-inset-top);
   z-index: 1;
   margin: 0 !important;
 
